# kqlalchemy

./: .gitignore  README.md  pyproject.toml
src/kqlalchemy/: __init__.py  base.py  kql_dialect.py  pyodbc.py
